fix(button): increase dark neutral hover contrast

--- a/components/button/server.css
+++ b/components/button/server.css
@@ -34,7 +34,7 @@
     background-color: light-dark(var(--color-black), var(--color-white));
 
     &:hover {
-      background-color: light-dark(var(--color-gray-20), var(--color-gray-80));
+      background-color: light-dark(var(--color-gray-20), var(--color-gray-60));
     }
 
     &[data-action="positive"] {
@@ -68,7 +68,7 @@
     border-color: currentcolor;
 
     &:hover {
-      background-color: light-dark(var(--color-gray-80), var(--color-gray-20));
+      background-color: light-dark(var(--color-gray-80), var(--color-gray-40));
     }
 
     &[data-action="positive"] {
@@ -97,7 +97,7 @@
 
   &[data-variant="plain"] {
     &:hover {
-      background-color: light-dark(var(--color-gray-80), var(--color-gray-20));
+      background-color: light-dark(var(--color-gray-80), var(--color-gray-40));
     }
 
     &[data-action="positive"] {
